# LiveCodeBench

./: README.md  pyproject.toml
lcb_runner/: lm_styles.py
lcb_runner/evaluation/: compute_scores.py  pretty.py
lcb_runner/prompts/: code_execution.py  code_generation.py  self_repair.py  test_output_prediction.py  utils.py
lcb_runner/runner/: base_runner.py  parser.py  scenario_router.py  vllm_runner.py
